<resources>
    <string name="app_name">HQuangHuy</string>
    <string name="NameUser">User</string>
    <string name="Pass">Pass</string>
    <string name="NameLogin">Log in</string>
    <string name="NamePass">Password</string>
    <string name="NameBtn">Login</string>
    <string name="CaptionLV">The list of products</string>
    <string name="txtNameProduct">Phone: </string>
    <string name="txtCostProduct">Cost: </string>
    <string name="txtCodeProduct">Code: </string>
    <string name="txtNameStudent">Name: </string>
    <string name="txtBack"><![CDATA[<---]]></string>
    <string name="Student">Name</string>
    <string name="btnUpdate">Update</string>
</resources>
