<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/Layout">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/solid_border"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtNameProduct"
                android:textStyle="bold"
                android:background="@color/colorBackground"
                android:layout_marginRight="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iddetailName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/txtCostProduct"
                android:textStyle="bold"
                android:background="@color/colorBackground"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iddetailCost"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/txtCodeProduct"
                android:textStyle="bold"
                android:background="@color/colorBackground"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iddetailCode"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_phone_android_black_24dp"
        android:id="@+id/idIV"/>
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_delete_black_24dp"
        android:id="@+id/idImgViewDelete"/>
</LinearLayout>