<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailInformation">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/solid_border">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtNameStudent"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Huynh Quang Huy"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Major: "
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Information Technology"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="MSSV: "
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1706020029"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtNameProduct"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idbuyName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtCodeProduct"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idbuyCode"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtCostProduct"
                android:layout_marginRight="65dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idbuyCost"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>