<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDataActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/solid_border">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtNameStudent"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ideditStudent"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Major: "
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ideditMajor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="MSSV: "
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ideditMSSV"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtNameProduct"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ideditName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtCodeProduct"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ideditCode"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtCostProduct"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBackground"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ideditCost"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/idbtnSave"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:id="@+id/idbtnBack"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>